tests/ui/feature-gates/feature-gate-target-feature-inline-always.stderr
error[E0658]: cannot use `#[inline(always)]` with `#[target_feature]`
  --> $DIR/feature-gate-target-feature-inline-always.rs:2:1
   |
LL | #[inline(always)]
   | ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #145574 <https://github.com/rust-lang/rust/issues/145574> for more information
   = help: add `#![feature(target_feature_inline_always)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
